# cpp-sdk

./: .clang_complete  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.CentOS.7  Dockerfile.CentOS.8  Dockerfile.Debian.10  Dockerfile.Debian.11  Dockerfile.Debian.9  Dockerfile.RHEL.7  Dockerfile.RHEL.8  Dockerfile.Ubuntu.14.04  Dockerfile.Ubuntu.16.04  Dockerfile.Ubuntu.18.04  Dockerfile.Ubuntu.20.04  Dockerfile.Ubuntu.21.10  Doxyfile  LICENSE  README.md  TUTORIAL.md  cs.sh  docker-compose.yaml
cmake/: common.cmake  sensorycloudConfig.cmake.in
dockerfiles/: CentOS.7.Dockerfile  CentOS.8.Dockerfile  Debian.10.Dockerfile  Debian.11.Dockerfile  Debian.9.Dockerfile  Dockerfile.CentOS.8  Dockerfile.Debian.10  Dockerfile.RHEL.7  Dockerfile.RHEL.9  Dockerfile.Ubuntu.16.04  Dockerfile.Ubuntu.18.04  Dockerfile.Ubuntu.22.04  Dockerfile.Windows.10  RHEL.7.Dockerfile  RHEL.8.Dockerfile  RHEL.9.Dockerfile  Ubuntu.16.04.Dockerfile  Ubuntu.18.04.Dockerfile  Ubuntu.20.04.Dockerfile  Ubuntu.22.04.Dockerfile  Windows.10.Dockerfile
docs/: annotated.html  assistant__service_8hpp_source.html  async__reader__writer__call_8hpp_source.html  async__response__reader__call_8hpp_source.html  audio__service_8hpp_source.html  awaitable__bidi__reactor_8hpp_source.html  awaitable__read__reactor_8hpp_source.html  awaitable__write__reactor_8hpp_source.html  base_8h_source.html  callback__data_8hpp_source.html  calldata_8hpp_source.html  classes.html  classsensory_1_1_config-members.html  classsensory_1_1_config.html  classsensory_1_1_sensory_cloud-members.html  classsensory_1_1_sensory_cloud.html  classsensory_1_1calldata_1_1_awaitable_bidi_reactor-members.html  classsensory_1_1calldata_1_1_awaitable_bidi_reactor.html  classsensory_1_1calldata_1_1_awaitable_read_reactor-members.html  classsensory_1_1calldata_1_1_awaitable_read_reactor.html  classsensory_1_1calldata_1_1_awaitable_write_reactor-members.html  classsensory_1_1calldata_1_1_awaitable_write_reactor.html  classsensory_1_1io_1_1_i_n_i_reader-members.html  classsensory_1_1io_1_1_i_n_i_reader.html  classsensory_1_1service_1_1_assistant_service-members.html  classsensory_1_1service_1_1_assistant_service.html  classsensory_1_1service_1_1_audio_service-members.html  classsensory_1_1service_1_1_audio_service.html  classsensory_1_1service_1_1_health_service-members.html  classsensory_1_1service_1_1_health_service.html  classsensory_1_1service_1_1_management_service-members.html  classsensory_1_1service_1_1_management_service.html  classsensory_1_1service_1_1_o_auth_service-members.html  classsensory_1_1service_1_1_o_auth_service.html  classsensory_1_1service_1_1_video_service-members.html  classsensory_1_1service_1_1_video_service.html  classsensory_1_1token__manager_1_1_file_system_credential_store-members.html  classsensory_1_1token__manager_1_1_file_system_credential_store.html  classsensory_1_1token__manager_1_1_secure_credential_store-members.html  classsensory_1_1token__manager_1_1_secure_credential_store.html  (+111 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  (+81 more)
examples/: README.md  hello_cloud.cpp  management.cpp  management_async.cpp  management_callback.cpp  management_demo.cpp
examples/applications/: CMakeLists.txt  voice_assistant.cpp
examples/audio/: CMakeLists.txt  README.md  authenticate.cpp  authenticate_async.cpp  authenticate_callback.cpp  biometric_authenticate.cpp  biometric_authenticate_async.cpp  biometric_authenticate_callback.cpp  biometric_enroll.cpp  biometric_enroll_async.cpp  biometric_enroll_callback.cpp  enroll.cpp  enroll_async.cpp  enroll_callback.cpp  enroll_event.cpp  enroll_event_async.cpp  enroll_event_callback.cpp  sound_id.cpp  sound_id_async.cpp  sound_id_callback.cpp  transcribe.cpp  transcribe_async.cpp  transcribe_callback.cpp  validate_enrolled_event.cpp  validate_enrolled_event_async.cpp  validate_enrolled_event_callback.cpp  validate_event.cpp  validate_event_async.cpp  validate_event_callback.cpp  wake_word.cpp  wake_word_async.cpp  wake_word_callback.cpp
examples/audio/asynchronous_callback/: authenticate.cpp  enroll.cpp  enroll_event.cpp  transcribe.cpp  validate_enrolled_event.cpp  validate_event.cpp
examples/audio/asynchronous_event/: authenticate.cpp  enroll.cpp  enroll_event.cpp  transcribe.cpp  validate_enrolled_event.cpp  validate_event.cpp
examples/audio/dep/: tqdm.hpp
examples/audio/file/: CMakeLists.txt  README.md  authenticate.cpp  enroll.cpp  enroll_event.cpp  synthesize_speech.cpp  transcribe.cpp  validate_enrolled_event.cpp  validate_event.cpp
examples/audio/synchronous/: authenticate.cpp  enroll.cpp  enroll_event.cpp  transcribe.cpp  validate_enrolled_event.cpp  validate_event.cpp
examples/dr_wav/: CMakeLists.txt  README.md  audio_buffer.hpp  authenticate.cpp  enroll.cpp  enroll_event.cpp  synthesize_speech.cpp  tqdm.hpp  transcribe.cpp  transcribe_callback.cpp  validate_enrolled_event.cpp  validate_event.cpp
examples/dr_wav/dep/: argparse.hpp  audio_buffer.hpp  dr_flac.h  dr_mp3.h
examples/management/: CMakeLists.txt  README.md  apitool.cpp  hello_cloud.cpp  management.cpp  management_async.cpp  management_callback.cpp
examples/opencv/: CMakeLists.txt  README.md  biometric_authenticate.cpp  biometric_authenticate_async.cpp  biometric_authenticate_callback.cpp  biometric_enroll.cpp  biometric_enroll_async.cpp  biometric_enroll_callback.cpp  callback_biometric_enroll.cpp  face_auth.cpp  liveness.cpp  liveness_async.cpp  liveness_callback.cpp
examples/video/: CMakeLists.txt  README.md  authenticate.cpp  authenticate_async.cpp  authenticate_callback.cpp  enroll.cpp  enroll_async.cpp  enroll_callback.cpp  liveness.cpp  liveness_async.cpp  liveness_callback.cpp
examples/video/asynchronous_callback/: authenticate.cpp  enroll.cpp  liveness.cpp
examples/video/asynchronous_event/: authenticate.cpp  enroll.cpp  liveness.cpp
examples/video/synchronous/: authenticate.cpp  enroll.cpp  liveness.cpp
md/: README.md  async_callback.md  async_event_loop.md  development.md  release_check_list.md  tutorial.md
(+153 files in other folders)
